fix search bug and UI for reminder page on mobile

--- a/src/app/main-page/visit-reminder/visit-reminder.component.scss
+++ b/src/app/main-page/visit-reminder/visit-reminder.component.scss
@@ -1,15 +1,18 @@
 @import '../../../styles.scss';
 
 .page_container {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vh;
+  box-sizing: border-box;
 
   .page_header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
-    width: 100%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
 
     .aiah_container {
       position: relative;
@@ -66,20 +69,9 @@
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row-reverse;
-
-    .icon {
-      cursor: pointer;
-      color: $color4;
-      font-size: 50px;
-      position: absolute;
-      top: 50px;
-      right: 50px;
-
-
-      &:hover {
-        opacity: 80%;
-      }
-    }
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
 
     button {
       cursor: pointer;
@@ -108,6 +100,120 @@
       &:hover {
         background-image: linear-gradient($color2, $color2), linear-gradient(to left, $gold1, $gold3);
       }
+    }
+  }
+
+  .icon_home {
+    cursor: pointer;
+    color: $color4;
+    font-size: 50px;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+
+
+    &:hover {
+      opacity: 80%;
+    }
+  }
+}
+
+// tablet
+@media (max-width: 768px) {
+  .page_container {
+    height: 100%;
+
+    .page_header {
+      width: 60%;
+      top: 45%;
+
+      .aiah_container {
+
+        .aiah {
+          font-size: 35px;
+          line-height: 55px;
+        }
+
+        .surah_name {
+          font-size: 20px;
+          bottom: -38px;
+          right: -49px;
+        }
+
+        .aiah_number {
+          font-size: 20px;
+          bottom: -38px;
+          left: -49px;
+        }
+      }
+    }
+
+    .control_section {
+      flex-wrap: wrap;
+      gap: 5px;
+    }
+
+    .icon_home {
+      font-size: 40px;
+      top: 40px;
+      right: 40px;
+    }
+  }
+}
+
+// mobile
+@media (max-width: 426px) {
+  .page_container {
+    height: 100%;
+
+    .page_header {
+      width: 80%;
+      top: 40%;
+
+      .aiah_container {
+
+        .aiah {
+          font-size: 30px;
+          line-height: 50px;
+
+          p {
+
+          }
+        }
+
+        .surah_name {
+          font-size: 16px;
+          bottom: -32px;
+          right: -39px;
+        }
+
+        .aiah_number {
+          font-size: 16px;
+          bottom: -32px;
+          left: -39px;
+        }
+      }
+    }
+
+    .control_section {
+
+      button {
+        font-size: 18px;
+
+        p {
+          padding: 5px 10px;
+        }
+
+        .icon {
+          font-size: 18px;
+        }
+      }
+    }
+
+    .icon_home {
+      font-size: 40px;
+      top: 35px;
+      right: 35px;
     }
   }
 }
